force-app/main/default/objects/custom_create81__c/custom_create81__c.object-meta.xml
<CustomObject>
    <label>Custom created object81</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects81</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>