force-app/main/default/objects/custom_create81__c/fields/custom_create_81field512__c.field-meta.xml
<CustomField>
    <fullName>custom_create_81field512__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 81field512</label>
    <type>Checkbox</type>
</CustomField>